--- a/index.html
+++ b/index.html
@@ -1,7 +1,232 @@
 <!DOCTYPE html>
-<html>
+<html lang="ar">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>صفحة أعمال عمر - مطور برمجيات</title>
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Cairo:wght@400;700&display=swap');
+
+        :root {
+            --primary-color: #2c3e50; /* لون أزرق داكن */
+            --secondary-color: #3498db; /* لون أزرق فاتح */
+            --accent-color: #e74c3c; /* لون أحمر */
+            --background-color: #f4f6f9; /* لون رمادي فاتح جدًا */
+            --text-color: #333;
+            --light-text-color: #ecf0f1;
+        }
+
+        body {
+            font-family: 'Cairo', sans-serif;
+            background-color: var(--background-color);
+            color: var(--text-color);
+            line-height: 1.6;
+            margin: 0;
+            padding: 0;
+            direction: rtl; /* اتجاه الكتابة من اليمين لليسار */
+            text-align: right; /* محاذاة النص لليمين */
+        }
+
+        .container {
+            max-width: 900px;
+            margin: auto;
+            padding: 20px;
+        }
+
+        header {
+            background-color: var(--primary-color);
+            color: var(--light-text-color);
+            padding: 40px 0;
+            text-align: center;
+            border-bottom: 5px solid var(--secondary-color);
+        }
+
+        header h1 {
+            margin: 0;
+            font-size: 2.5rem;
+            font-weight: 700;
+        }
+
+        header p {
+            font-size: 1.2rem;
+            font-weight: 400;
+            margin-top: 10px;
+        }
+
+        .section {
+            background-color: #fff;
+            padding: 30px;
+            margin: 20px 0;
+            border-radius: 8px;
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+        }
+
+        .section h2 {
+            font-size: 2rem;
+            color: var(--primary-color);
+            border-bottom: 3px solid var(--accent-color);
+            padding-bottom: 10px;
+            margin-bottom: 20px;
+        }
+
+        .project-card {
+            border: 1px solid #ddd;
+            border-radius: 8px;
+            padding: 20px;
+            margin-bottom: 15px;
+            transition: transform 0.3s ease, box-shadow 0.3s ease;
+        }
+
+        .project-card:hover {
+            transform: translateY(-5px);
+            box-shadow: 0 6px 12px rgba(0, 0, 0, 0.15);
+        }
+
+        .project-card h3 {
+            color: var(--secondary-color);
+            margin-top: 0;
+        }
+
+        .project-card .tech-list {
+            list-style: none;
+            padding: 0;
+            display: flex;
+            flex-wrap: wrap;
+            gap: 10px;
+            margin-top: 10px;
+        }
+
+        .project-card .tech-list li {
+            background-color: var(--secondary-color);
+            color: #fff;
+            padding: 5px 10px;
+            border-radius: 5px;
+            font-size: 0.9rem;
+        }
+        
+        .project-card a {
+            color: var(--accent-color);
+            text-decoration: none;
+            font-weight: 700;
+            margin-top: 10px;
+            display: inline-block;
+        }
+
+        .project-card a:hover {
+            text-decoration: underline;
+        }
+
+        .contact-links {
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: center;
+            gap: 20px;
+            margin-top: 20px;
+        }
+
+        .contact-links a {
+            background-color: var(--secondary-color);
+            color: #fff;
+            text-decoration: none;
+            padding: 10px 20px;
+            border-radius: 5px;
+            transition: background-color 0.3s ease;
+        }
+        
+        .contact-links a:hover {
+            background-color: #2980b9;
+        }
+
+        footer {
+            text-align: center;
+            padding: 20px 0;
+            color: var(--text-color);
+        }
+    </style>
+</head>
 <body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+
+<header>
+    <div class="container">
+        <h1>مرحباً، أنا عمر! 👋</h1>
+        <p>مطور برمجيات متخصص في <span style="color: var(--accent-color);">تطوير تطبيقات الموبايل باستخدام Flutter</span></p>
+    </div>
+</header>
+
+<div class="container">
+    <section class="section">
+        <h2>نبذة عني 🚀</h2>
+        <p>
+            أنا مطور برمجيات شغوف بالبناء والابتكار. لدي خبرة في تطوير <span style="font-weight: bold;">تطبيقات الموبايل عالية الجودة</span>. أُركز حاليًا على بناء حلول قوية وفعّالة باستخدام <span style="font-weight: bold;">Dart و Flutter</span>، مع خبرة في بناء الواجهات الخلفية باستخدام <span style="font-weight: bold;">Node.js و Express</span>.
+        </p>
+    </section>
+
+    <section class="section">
+        <h2>معرض أعمالي 💡</h2>
+        <div class="project-card">
+            <h3>تطبيق إدارة المهام اليومية</h3>
+            <p>
+                تطبيق موبايل مصمم لمساعدة المستخدمين على تنظيم مهامهم اليومية بكفاءة. يتميز بواجهة مستخدم حديثة وتجربة استخدام سلسة.
+            </p>
+            <ul class="tech-list">
+                <li>Flutter</li>
+                <li>Dart</li>
+                <li>Firebase</li>
+            </ul>
+            <a href="https://github.com/omar/task-manager" target="_blank">زيارة مستودع GitHub</a>
+        </div>
+        <div class="project-card">
+            <h3>منصة التجارة الإلكترونية</h3>
+            <p>
+                نظام تجارة إلكترونية كامل يشمل الواجهة الأمامية (Frontend) والواجهة الخلفية (Backend) مع ميزات سلة التسوق والمدفوعات الآمنة.
+            </p>
+            <ul class="tech-list">
+                <li>Flutter</li>
+                <li>Dart</li>
+                <li>Node.js</li>
+                <li>Express</li>
+                <li>MongoDB</li>
+            </ul>
+            <a href="https://github.com/omar/ecommerce-platform" target="_blank">زيارة مستودع GitHub</a>
+        </div>
+    </section>
+
+    <section class="section">
+        <h2>مهاراتي 🛠️</h2>
+        <p>
+            أمتلك خبرة واسعة في التقنيات التالية:
+        </p>
+        <ul class="tech-list">
+            <li>Flutter</li>
+            <li>Dart</li>
+            <li>Node.js</li>
+            <li>Express</li>
+            <li>RESTful APIs</li>
+            <li>Git</li>
+            <li>GitHub</li>
+            <li>MongoDB</li>
+            <li>Firebase</li>
+        </ul>
+    </section>
+
+    <section class="section">
+        <h2>تواصل معي ✉️</h2>
+        <p style="text-align: center;">
+            أنا مهتم دائمًا بالتعاون في مشاريع جديدة. لا تتردد في التواصل معي.
+        </p>
+        <div class="contact-links">
+            <a href="mailto:your-email@example.com">البريد الإلكتروني</a>
+            <a href="https://linkedin.com/in/your-linkedin-profile" target="_blank">LinkedIn</a>
+            <a href="https://github.com/your-github-profile" target="_blank">GitHub</a>
+        </div>
+    </section>
+</div>
+
+<footer>
+    <div class="container">
+        <p>&copy; 2025 عمر. جميع الحقوق محفوظة.</p>
+    </div>
+</footer>
+
 </body>
 </html>
