--- a/index.html
+++ b/index.html
@@ -78,9 +78,23 @@
           <div class="project-images" data-project="p1">
             <!-- استبدل الروابط بالصور المحلية التي سترفعها داخل repo -->
             <!-- مثال: assets/projects/p1/1.jpg -->
-            <img src="assets/projects/p1/1.jpg" alt="لقطة واجهة النظام 1" loading="lazy" onclick="openModalFor(this)">
-            <img src="assets/projects/p1/2.jpg" alt="لقطة واجهة النظام 2" loading="lazy" onclick="openModalFor(this)">
-            <img src="assets/projects/p1/3.jpg" alt="لقطة واجهة النظام 3" loading="lazy" onclick="openModalFor(this)">
+            <img src="assets/projects/p1/p (1).png" alt="لقطة واجهة النظام 1" loading="lazy" onclick="openModalFor(this)">
+            <img src="assets/projects/p1/p (2).png" alt="لقطة واجهة النظام 1" loading="lazy" onclick="openModalFor(this)">
+            <img src="assets/projects/p1/p (3).png" alt="لقطة واجهة النظام 1" loading="lazy" onclick="openModalFor(this)">
+            <img src="assets/projects/p1/p (4).png" alt="لقطة واجهة النظام 1" loading="lazy" onclick="openModalFor(this)">
+            <img src="assets/projects/p1/p (5).png" alt="لقطة واجهة النظام 1" loading="lazy" onclick="openModalFor(this)">
+            <img src="assets/projects/p1/p (6).png" alt="لقطة واجهة النظام 1" loading="lazy" onclick="openModalFor(this)">
+            <img src="assets/projects/p1/p (7).png" alt="لقطة واجهة النظام 1" loading="lazy" onclick="openModalFor(this)">
+            <img src="assets/projects/p1/p (8).png" alt="لقطة واجهة النظام 1" loading="lazy" onclick="openModalFor(this)">
+            <img src="assets/projects/p1/p (9).png" alt="لقطة واجهة النظام 1" loading="lazy" onclick="openModalFor(this)">
+            <img src="assets/projects/p1/p (10).png" alt="لقطة واجهة النظام 1" loading="lazy" onclick="openModalFor(this)">
+            <img src="assets/projects/p1/p (11).png" alt="لقطة واجهة النظام 1" loading="lazy" onclick="openModalFor(this)">
+            <img src="assets/projects/p1/p (12).png" alt="لقطة واجهة النظام 1" loading="lazy" onclick="openModalFor(this)">
+            <img src="assets/projects/p1/p (13).png" alt="لقطة واجهة النظام 1" loading="lazy" onclick="openModalFor(this)">
+            <img src="assets/projects/p1/p (14).png" alt="لقطة واجهة النظام 1" loading="lazy" onclick="openModalFor(this)">
+            <img src="assets/projects/p1/p (15).png" alt="لقطة واجهة النظام 1" loading="lazy" onclick="openModalFor(this)">
+            <img src="assets/projects/p1/p (16).png" alt="لقطة واجهة النظام 1" loading="lazy" onclick="openModalFor(this)">
+            <img src="assets/projects/p1/p (17).png" alt="لقطة واجهة النظام 1" loading="lazy" onclick="openModalFor(this)">
           </div>
 
           <p class="project-desc">حل مكتبي متكامل لإدارة الرحلات، الحجوزات، الفواتير والتقارير. يوفّر لوحة تحكم ومكاتب خلفية لإدارة العمليات.</p>
