--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <div class="hero-deco" aria-hidden="true"></div>
         <div class="hero-inner" role="banner">
           <div class="hero-left">
-            <h1 id="hero-title">أفكار متميزة. حلول غير تقليدية.</h1>
+            <h1 id="hero-title">من فكرة الى واقع.</h1>
             <p>
               أنا عمر — مصمم ومطور حلول موبايل وأنظمة أعمال، أُحب تصميم واجهات
               متجددة وتجربة مستخدم متقنة. هذه بعض أعمالي المميزة.
@@ -33,7 +33,7 @@
             </div>
           </div>
 
-          <div class="hero-right" aria-hidden="true">
+          <!-- <div class="hero-right" aria-hidden="true">
             <div class="device-frame" role="img" aria-label="لقطات من المشاريع">
               <div class="device-screenshot">
                 <div style="text-align: center">
@@ -52,7 +52,7 @@
                 <button class="ghost">تفاصيل</button>
               </div>
             </div>
-          </div>
+          </div> -->
         </div>
       </header>
 
@@ -77,11 +77,21 @@
         <div class="cta-row">
           <div class="muted-small">هل لديك مشروع تريد تصميمه؟</div>
           <div class="contact-links">
-            <a class="btn-primary" href="mailto:contact@example.com"
+            <a class="btn-primary" href="mailto:omer11.oo13@gmail.com"
               >تواصل معي</a
             >
-            <a class="btn-ghost" href="#" target="_blank">LinkedIn</a>
-            <a class="btn-ghost" href="#" target="_blank">GitHub</a>
+            <a
+              class="btn-ghost"
+              href="https://www.linkedin.com/in/omer-al-dabbagh-5638a328b"
+              target="_blank"
+              >LinkedIn</a
+            >
+            <a
+              class="btn-ghost"
+              href="https://github.com/omer2190"
+              target="_blank"
+              >GitHub</a
+            >
           </div>
         </div>
       </section>
