--- a/index.html
+++ b/index.html
@@ -110,7 +110,9 @@
         </div>
       </section>
 
-      <footer>&copy; <span id="year"></span> عمر — جميع الحقوق محفوظة.</footer>
+      <footer>
+        &copy; <span id="year"></span> — omer2190 — جميع الحقوق محفوظة.
+      </footer>
     </div>
 
     <!-- MODAL VIEWER -->
