Add Google site verification to index.html
Added Google site verification meta tag.

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1" />
+    <meta name="google-site-verification" content="3Pt6pTB59gudMCrj9g2jVhQXtnbyG-beIEsoxVXbBHM" />
     <title data-i18n="page-title">عمر الدباغ — مطور حلول برمجية احترافية</title>
     <meta
       name="description"
