--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
       name="description"
       content="عمر الدباغ - مطور تطبيقات موبايل وأنظمة أعمال متكاملة. متخصص في Flutter و Node.js"
     />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
